--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Заголовок</title>
 </head>
 <body>
-  <h1>Название абзаца</h1>
+  <h1>Название абзаца веб-страницы</h1>
   <p>Абзац веб-страницы</p>
 </body>
 </html>
